# colcon_FW_sec

./: BUILD.md  DESIGN.md  INDEX.md  MANIFEST.md  PROJECT_SUMMARY.md  QUICKSTART.md
src/: README.md
src/chesslab_setup2/launch/: chesslab_gz.launch.py  chesslab_setup2_demo.launch.py  chesslab_view.launch.py
src/chesslab_setup2/urdf/: chesslab_gz.urdf.xacro
src/chesslab_setup2/worlds/: flat_chesslab.sdf  ris_chesslab.sdf
src/final-work/: BUILD_AND_RUN.md  DELIVERY_SUMMARY.md  DOCS_INDEX.md  FILES_MANIFEST.md  PROJECT_SUMMARY.md  README.md  README_NEW.md
src/final-work/action_manager/: CMakeLists.txt  package.xml
src/final-work/action_manager/action/: ChessAction.action
src/final-work/action_manager/include/action_manager/: action_manager_node.hpp
src/final-work/action_manager/launch/: action_manager.launch.py
src/final-work/action_manager/src/: action_manager_node.cpp
src/final-work/action_manager_module/: CMakeLists.txt  package.xml
src/final-work/action_manager_module/src/: action_manager_server.cpp
src/final-work/action_manager_module_interfaces/: CMakeLists.txt  package.xml
src/final-work/action_manager_module_interfaces/action/: ExecuteChessAction.action
src/final-work/aruco_broadcaster/launch/: aruco_pl2.launch.py
src/final-work/examples/: example_1_startup_simulation.sh  example_2_query_pieces.sh  example_3_move_piece.sh  example_4_capture.sh  run_validation.sh
src/final-work/launch/: chess_perception.launch.py  chess_system.launch.py
src/final-work/planning_module/: CMakeLists.txt  package.xml
src/final-work/planning_module/include/planning_module/: planning_node.hpp
src/final-work/planning_module/launch/: planning_node.launch.py
src/final-work/planning_module/src/: ik_client_test.cpp  planning_node.cpp
src/final-work/planning_module/srv/: PlanPickPlace.srv
src/final-work/sensing_module/: CMakeLists.txt  package.xml
src/final-work/sensing_module/config/: chess_configuration_setup.yaml  sensing_node_params.yaml
src/final-work/sensing_module/launch/: camera_image_pipeline.launch.py  chesslab_sensing.launch.py
src/final-work/sensing_module/src/: sensing_node.cpp
src/final-work/sensing_module/srv/: PieceLocation.srv
src/final-work/tools/: calibrate_sensing.py
src/robotiq_85_gripper/robotiq_85_gz/urdf/: robotiq_85_gripper_gz.ros2_control.xacro
src/tablesens/launch/: realsense_camera.launch.py
