<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>action_manager</name>
  <version>0.0.0</version>
  <description>Action Manager: orchestrates chess piece movements (MOVE, CAPTURE, CASTLING)</description>
  <maintainer email="team@example.com">Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  
  <!-- Internal modules -->
  <depend>sensing_module</depend>
  <depend>planning_module</depend>
  <depend>aruco_broadcaster</depend>
  
  <!-- External dependencies -->
  <depend>chesslab_setup2_interfaces</depend>
  <depend>robotiq_85_gripper_server</depend>
  <depend>kinenikros2</depend>

  <!-- Action generation -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
